--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: x-mint-layout
 Version: 0.1.0
-Depends: python3 , python3-pyqt5, python3-psutils, xfce4-panel-profiles, pkexec, gnome-system-monitor
+Depends: python3 , python3-pyqt5, python3-psutil, xfce4-panel-profiles, pkexec, gnome-system-monitor
 Maintainer: VerEnderT
 Architecture: all
 Homepage: http://verlinuxt.sytes.net
